--- a/src/main/webapp/resources/css/store.css
+++ b/src/main/webapp/resources/css/store.css
@@ -1,11 +1,7 @@
-.tablist-left {
-    width: 25%;
-    display: inline-block;
+#tab-content div {
+    display: none;
 }
 
-.tablist-content {
-    width: 60%;
-    display: inline-block;
-    vertical-align: top;
-    margin-left: 5%;
+#tab-content div.is-active {
+    display: block;
 }
